# uv-shell

./: Cargo.toml  LICENSE  README.md  uv-shell.sh
.github/: CODEOWNERS  FUNDING.yml  labeler.yml  release.yml
.github/workflows/: pull-request.yml  semantic-release.yml
adds-on/: Cargo.toml  README.md
adds-on/src/: main.rs
adds-on/tests/: integration.rs
completions/: README.md
scripts/image/: Dockerfile  buildx.sh
scripts/shell-version/: LICENSE  README.md
scripts/shell-version/completions/: uv-shell-completion.sh
src/: main.rs
src/completions/: uv-shell.bash  uv-shell.fish  uv-shell.nu  uv-shell.ps1  uv-shell.zsh
tests/: integration.rs
